[package]
name = "quic-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
moka = { version = "0.12.1", features = ["future"] }
quinn = "0.10.2"
rustls = { version = "0.21.9", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.4"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
