[package]
name = "quic-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
argh = "0.1.12"
flume = "0.11.0"
futures = "0.3.29"
lz4_flex = { version = "0.11.1", default-features = false }
moka = { version = "0.12.1", features = ["future"] }
quinn = "0.10.2"
rcgen = { version = "0.11.3", features = ["x509-parser", "pem"] }
rustls = { version = "0.21.10", features = ["quic"] }
rustls-pemfile = "2"
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tun = { version = "0.6.1", features = ["async"] }
